# radical-algebra

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/radical_algebra/: __init__.py  __main__.py  character_db.py  core.py  exceptions.py  ids.py  presets.py  tensor.py  validation.py
tests/: conftest.py  test_character_db.py  test_cli.py  test_ids.py  test_integration.py  test_main.py  test_radical_set.py  test_tensor.py  test_validation.py
