[project]
name = "radical-algebra"
version = "0.1.0"
description = "Tensor algebra on Chinese radicals - find valid CJKV character combinations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "hanzipy>=1.0.4",
    "hanzidentifier>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radical_algebra"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/radical_algebra"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
show_missing = true
